--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW" data-build-timestamp-utc="<%= new Date().toISOString() %>"></html>
 
 <head>
   <meta charset="utf-8">
